# flax-cnn-model

./: Dockerfile  README.md  pyproject.toml  train.py
